--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
 		"typescript-eslint": "^8.16.0"
 	},
 	"dependencies": {
-		"@octokit/rest": "^18.0.0"
+		"@octokit/rest": "^18.0.0",
+		"body-parser": "^1.20.3",
+		"express": "^4.21.2",
+		"sqlite3": "^5.1.7"
 	}
 }
